<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Area_Bathroom" Id="{ee2ba94f-a8e5-4d34-9ce5-b5971e2497e1}">
    <Declaration><![CDATA[TYPE ST_Area_Bathroom :
STRUCT
	wpRoom				: ST_WP_Bathroom;
	fbSpotLights		: FB_DigitalOut;
	fbSinkLights		: FB_DigitalOut;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>