<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Area_Bedroom1" Id="{dbe4f5f9-4219-4998-b802-affa5d840593}">
    <Declaration><![CDATA[TYPE ST_Area_Bedroom1 :
STRUCT
	wpRoom				: ST_WP_Bedroom1;
	wpBedL				: ST_WP_Bedroom1BedL;
	fbSocketBedL		: FB_DigitalOut;
	wpBedR				: ST_WP_Bedroom1BedR;
	fbSocketBedR		: FB_DigitalOut;
	fbSpotLights		: FB_DigitalOut;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>