<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Area_DiningRoom" Id="{2c2eae66-f953-46c5-8486-285a79927bac}">
    <Declaration><![CDATA[TYPE ST_Area_DiningRoom :
STRUCT
	wpRoom				: ST_WP_DiningRoom;
	fbSpotLights		: FB_DigitalOut;
	fbCenterLight		: FB_DigitalOut;
	fbAlarmsensor		: FB_AlarmSensor(sSensorName := 'DiningRoom', nSensorID := 4, bEnableWarning := TRUE);
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>