<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_WP_DiningRoom" Id="{67781861-3ae9-427c-9517-0dd05fee0ce5}">
    <Declaration><![CDATA[// Eethoek B1-1-11L0-0-00
TYPE ST_WP_DiningRoom :
STRUCT
	fbKnop1		: FB_DigitalIn;
	fbKnop2		: FB_DigitalIn;
	fbKnop3		: FB_DigitalIn;
	fbKnop4		: FB_DigitalIn;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>